--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,23 @@ spring.jpa.open-in-view=false
 spring.jpa.defer-datasource-initialization = true
 
 spring.config.import=env.properties
+
+# API URLs
+api.search.base-url=https://api.spotify.com/v1/search
+api.track.base-url=https://api.spotify.com/v1/tracks
+api.search.base-url.youtube=https://www.googleapis.com/youtube/v3/search
+api.track.base-url.youtube=https://www.googleapis.com/youtube/v3/videos
+
+# Spotify Configuration
+SPOTIFY_AUTH_URL=https://accounts.spotify.com/api/token
+SPOTIFY_CLIENT_ID=${SPOTIFY_CLIENT_ID:}
+SPOTIFY_CLIENT_SECRET=${SPOTIFY_CLIENT_SECRET:}
+
+# YouTube Configuration  
+YOUTUBE_API_KEY=${YOUTUBE_API_KEY:}
+
+# Server configuration
+server.port=${PORT:8080}
+
+# Logging
+logging.level.com.example.application=${LOG_LEVEL:INFO}
