Update application properties to make config import optional and remove server port configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.open-in-view=false
 # Initialize the JPA Entity Manager before considering data.sql so that the EM can create the schema and data.sql contain data
 spring.jpa.defer-datasource-initialization = true
 
-spring.config.import=env.properties
+spring.config.import=optional:classpath:env.properties
 
 # API URLs
 api.search.base-url=https://api.spotify.com/v1/search
@@ -28,9 +28,6 @@ SPOTIFY_CLIENT_SECRET=${SPOTIFY_CLIENT_SECRET:}
 
 # YouTube Configuration  
 YOUTUBE_API_KEY=${YOUTUBE_API_KEY:}
-
-# Server configuration
-server.port=${PORT:8080}
 
 # Logging
 logging.level.com.example.application=${LOG_LEVEL:INFO}
