--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,22 +9,25 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
         java-version: '21'
         distribution: 'temurin'
-        
+
     - name: Cache Maven packages
       uses: actions/cache@v3
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
-        
+
+    - name: Make mvnw executable
+      run: chmod +x ./mvnw
+
     - name: Build with Maven
       run: ./mvnw clean compile -Pproduction
