--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,18 +16,18 @@ spring.jpa.defer-datasource-initialization = true
 spring.config.import=optional:classpath:env.properties
 
 # API URLs
-api.search.base-url=https://api.spotify.com/v1/search
-api.track.base-url=https://api.spotify.com/v1/tracks
-api.search.base-url.youtube=https://www.googleapis.com/youtube/v3/search
-api.track.base-url.youtube=https://www.googleapis.com/youtube/v3/videos
+api.spotify.search-base-url=https://api.spotify.com/v1/search
+api.spotify.track-base-url=https://api.spotify.com/v1/tracks
+api.youtube.search-base-url=https://www.googleapis.com/youtube/v3/search
+api.youtube.track-base-url=https://www.googleapis.com/youtube/v3/videos
 
 # Spotify Configuration
-SPOTIFY_AUTH_URL=https://accounts.spotify.com/api/token
-SPOTIFY_CLIENT_ID=${SPOTIFY_CLIENT_ID:}
-SPOTIFY_CLIENT_SECRET=${SPOTIFY_CLIENT_SECRET:}
+spotify.auth-url=${SPOTIFY_AUTH_URL:https://accounts.spotify.com/api/token}
+spotify.client-id=${SPOTIFY_CLIENT_ID:}
+spotify.client-secret=${SPOTIFY_CLIENT_SECRET:}
 
 # YouTube Configuration  
-YOUTUBE_API_KEY=${YOUTUBE_API_KEY:}
+youtube.api-key=${YOUTUBE_API_KEY:}
 
 # Logging
 logging.level.com.example.application=${LOG_LEVEL:INFO}
