--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,8 @@ spring.jpa.defer-datasource-initialization = true
 spring.config.import=optional:classpath:env.properties
 
 # API URLs
-api.spotify.search-base-url=https://api.spotify.com/v1/search
-api.spotify.track-base-url=https://api.spotify.com/v1/tracks
-api.youtube.search-base-url=https://www.googleapis.com/youtube/v3/search
-api.youtube.track-base-url=https://www.googleapis.com/youtube/v3/videos
+api.spotify.base-url=https://api.spotify.com
+api.youtube.base-url=https://www.googleapis.com
 
 # Spotify Configuration
 spotify.auth-url=${SPOTIFY_AUTH_URL:https://accounts.spotify.com/api/token}
