add save button for spotify

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ api.youtube.base-url=https://www.googleapis.com
 spotify.auth-url=${SPOTIFY_AUTH_URL:https://accounts.spotify.com/api/token}
 spotify.client-id=${SPOTIFY_CLIENT_ID:}
 spotify.client-secret=${SPOTIFY_CLIENT_SECRET:}
+spotify.redirect-uri=${SPOTIFY_REDIRECT_URI:http://127.0.0.1:8080/api/spotify/auth/callback}
 
 # YouTube Configuration  
 youtube.api-key=${YOUTUBE_API_KEY:}
